# smack-svn

trunk/: AUTHORS  ChangeLog  Makefile  Makefile.am  README  THANKS  TODO  adenv.c  adenv_lvl.c  autogen.sh  build.sh  cmdline.c  cmdline.ggo  cmdline.h  configure.ac  dahdsr_fexp.c  dahdsr_hexp.c  drum.gob  gui-drum.c  gui-drum.h  gui.c  gui.h  phat-fan-slider-pix.c  phat-fan-slider-pix.h  phatfansliderpix.gob  smack.spec
trunk/om/: 808kit.om  Makefile.am
trunk/om/smack808/: 808bass.om  808bass.om.xml  808clave.om  808clave.om.xml  808cowbell-preset2.om.xml  808cowbell.om  808cowbell.om.xml  808hihat.om  808hihat.om.xml  808snare.om  808snare.om.xml  808snare2.om.xml  Makefile.am
trunk/om/smack909/: 909bass.om  909bass.om.xml  909snare-V2.om.xml  909snare.om  909snare.om.xml  Makefile.am
trunk/om/smackfm/: Makefile.am  sfmhihat2.om  sfmhihat2.om.xml  sfmhihat3.om.xml  sfmhihatbig.om  sfmhihatbig.om.xml
trunk/om/smackks/: karplus_strong_snare.om
trunk/om/smackmonkey/: Makefile.am  clapshake.om  cowride.om  crash_plate_sh.om  drum_waveguide_cc-pan.om  env_ad_product.om  env_adsr_product.om  env_adsr_product_stereo.om  hi-hat_square_chorus.om  influence.om  kick_sine_boosted.om  metal_hit.om  panner_m_to_s.om  random_mod.om  random_mod_noise_rcac.om  random_mod_wave_const.om  snare_clip.om  tambourine_feedback.om
trunk/om/smacknoisy/: Makefile.am  compsnare.om  noisydirt.om  noisyhat.om  noisyrev.om  noisyshaker.om
trunk/om/supersmack/: Makefile.am  shiftconga.om  shiftdjembe.om  supermembrane.om  supersnare.om  supertom.om
trunk/pixmaps/: Makefile.am
